--- a/JWTAuthServer.Core/JWTAuthServer.Core.csproj
+++ b/JWTAuthServer.Core/JWTAuthServer.Core.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\JWTAuthServer.SharedLibrary\JWTAuthServer.SharedLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
