Service katmanı tamamlandı

--- a/JWTAuthServer.API/appsettings.json
+++ b/JWTAuthServer.API/appsettings.json
@@ -1,4 +1,25 @@
 {
+  "TokeOptions": {
+    "Audience": [ "www.authserver.com", "www.miniapp1.com", "www.miniapp2.com", "www.miniapp3.com" ],
+    "Issuer": "www.authserver.com",
+    "AccessTokenExpiration": 5,
+    "RefreshTokenExpiration": 600,
+    "SecurityKey": "mysecuritykeymysecuritykeymysecuritykeymysecuritykey"
+  },
+
+  "Clients": [
+    {
+      "ClientId": "SpaApp",
+      "Secret": "secret",
+      "Audiences": [ "www.miniapp3.com" ]
+    },
+    {
+      "ClientId": "SpaApp",
+      "Secret": "secret",
+      "Audiences": [ "www.miniapp3.com", "www.miniapp4.com" ]
+    }
+  ],
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
