API katmanı hazırlandı. Program.cs dosyası hazırlanıp migration yapıldı. Test için oluşturulan MiniApi projeleri düzenlendi ve proje tamamlandı.

--- a/JWTAuthServer.API/appsettings.json
+++ b/JWTAuthServer.API/appsettings.json
@@ -1,6 +1,9 @@
 {
-  "TokeOptions": {
-    "Audience": [ "www.authserver.com", "www.miniapp1.com", "www.miniapp2.com", "www.miniapp3.com" ],
+  "ConnectionStrings": {
+    "SqlServer": "Server=(localdb)\\mssqllocaldb;Database=JwtAuthDb;Trusted_Connection=True"
+  },
+  "TokenOptions": {
+    "Audience": [ "www.authserver.com", "www.miniapp1.com", "www.miniapp2.com" ],
     "Issuer": "www.authserver.com",
     "AccessTokenExpiration": 5,
     "RefreshTokenExpiration": 600,
@@ -14,7 +17,7 @@
       "Audiences": [ "www.miniapp3.com" ]
     },
     {
-      "ClientId": "SpaApp",
+      "ClientId": "MobileApp",
       "Secret": "secret",
       "Audiences": [ "www.miniapp3.com", "www.miniapp4.com" ]
     }
