--- a/JWTAuthServer.Data/JWTAuthServer.Data.csproj
+++ b/JWTAuthServer.Data/JWTAuthServer.Data.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\JWTAuthServer.Core\JWTAuthServer.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
