--- a/JWTAuthServer.SharedLibrary/JWTAuthServer.SharedLibrary.csproj
+++ b/JWTAuthServer.SharedLibrary/JWTAuthServer.SharedLibrary.csproj
@@ -8,4 +8,7 @@
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App"></FrameworkReference>
 	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
+	</ItemGroup>
 </Project>
